# sentiment_analysis

./: .gitignore  README.md  local_sentiment_analysis.py  pyproject.toml  sentiment_analysis.py
src/: local_gpt_sentiment_analysis.py  local_openai_sentiment_analysis.py  local_sentiment_analysis.py  utils.py
tr_translation/: facebook:mbart-large-50-many-to-many-mmt.ipynb  facebook:nllb-200-distilled-600M.ipynb  facebook:seamless-m4t-v2-large.ipynb
